app/javascript/styles/akane-blue/variables.scss
@use '../mastodon/functions' as *;

// Dependent colors
$black: #000000;
$blurple-600: #2075b1;
$blurple-500: #2b90d9;
$blurple-400: #56a7e1;
$blurple-300: #82bee9;
$grey-600: hsl(208deg, 8%, 33%);
$grey-100: hsl(208deg, 51%, 90%);

$classic-base-color: #282c37;
$classic-primary-color: #9baec8;
$classic-secondary-color: #d9e1e8;
$classic-highlight-color: #2b90d9;

@use '../mastodon/variables' with (
  $ui-base-color: $classic-base-color,
  $ui-primary-color: $classic-primary-color,
  $ui-secondary-color: $classic-secondary-color,
  $ui-highlight-color: $classic-highlight-color,

  $ui-button-background-color: $blurple-500,
  $ui-button-focus-background-color: $blurple-600,
  $ui-button-focus-outline-color: $blurple-400,
  $ui-button-focus-outline: solid 2px $blurple-400,

  $ui-button-secondary-color: $blurple-500,
  $ui-button-secondary-border-color: $blurple-500,
  $ui-button-secondary-focus-border-color: $blurple-300,
  $ui-button-secondary-focus-color: $blurple-300,

  $ui-button-tertiary-color: $blurple-300,
  $ui-button-tertiary-border-color: $blurple-300,
  $ui-button-tertiary-focus-background-color: $blurple-600,

  $darker-text-color: lighten($classic-primary-color, 20%),
  $dark-text-color: lighten($classic-primary-color, 12%),
  $secondary-text-color: lighten($classic-secondary-color, 6%),
  $highlight-text-color: lighten($classic-highlight-color, 10%),
  $action-button-color: lighten($classic-base-color, 50%),
  $inverted-text-color: $black,
  $lighter-text-color: darken($classic-base-color, 6%),
  $light-text-color: darken($classic-primary-color, 40%)
);

